--- a/blog.html
+++ b/blog.html
@@ -214,11 +214,10 @@ fontFamily: 'sans-serif',
 
         return (
           <div style={styles}>
-            <h2>No hay posts para mostrar</h2>
+            <h1>No hay posts para mostrar</h1>
             <p>
-              No hay contenido en este momento :(  ¡Intenta más tarde!
+              No hay contenido en este momento :(  
             </p>
-  
           </div>
         )
       }
